--- a/web pages/info.html
+++ b/web pages/info.html
@@ -52,7 +52,10 @@
     th, td {
       padding: 10px;
       border: 1px solid #ddd;
-      width: 25%; 
+      word-wrap: break-word;
+      word-break: break-word;
+      white-space: normal;
+      text-align: left;
     }
     th {
       background-color: #f2f2f2;
