--- a/web pages/update.html
+++ b/web pages/update.html
@@ -3,93 +3,7 @@
 <head>
   <title>Firmware Update</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      display: flex;
-      justify-content: center; 
-      align-items: center;
-      text-align: center; 
-      font-family: "Arial"; 
-      background-color: #e0f7fa; 
-      color: #006064; 
-      margin: 0; 
-      padding: 0; 
-    }
-    .container {
-      width: 400px; 
-      height: auto; 
-      display: flex; 
-      flex-direction: column;
-      align-items: center;
-      margin-top: 50px; 
-      background: #ffffff; 
-      padding: 20px; 
-      border-radius: 10px; 
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    }
-    .button { 
-      padding: 10px 20px; 
-      font-size: 18px; 
-      margin: 10px; 
-      cursor: pointer; 
-      border: none; 
-      border-radius: 5px; 
-      background-color: #00838f; 
-      color: #ffffff; 
-      text-decoration: none; 
-      display: inline-block; 
-    }
-    input[type="submit"] {
-      padding: 10px 20px; 
-      font-size: 18px; 
-      margin: 20px; 
-      cursor: pointer; 
-      border: none; 
-      border-radius: 5px; 
-      background-color: #00838f; 
-      color: #ffffff; 
-      text-decoration: none; 
-      display: inline-block;
-      width: 180px; 
-      height: 40px; 
-      text-align: center;
-      line-height: 20px; 
-    }
-
-    input[type="file"] { 
-      padding: 10px; 
-      border: 2px dashed #00838f; 
-      border-radius: 5px; 
-      width: 200px; 
-      cursor: pointer; 
-    }
-    #progressContainer {
-      width: 100%;
-      margin-top: 20px;
-      display: none; /* Hidden initially */
-      border: 2px solid #00838f; /* Add border to make it more visible */
-      border-radius: 5px;
-      position: relative;
-    }
-    #progressBar {
-      width: 0%;
-      height: 20px;
-      background-color: #00838f;
-      border-radius: 5px;
-      transition: width 0.4s ease;
-      position: relative;
-    }
-    #progressText {
-      position: absolute;
-      width: 100%;
-      text-align: center;
-      top: 0;
-      left: 0;
-      color: #ffffff;
-      font-weight: bold;
-      line-height: 20px; /* Align text vertically */
-    }
-  </style>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <div class="container">
