--- a/web pages/wifimanage.html
+++ b/web pages/wifimanage.html
@@ -4,109 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WiFi Management</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      font-family: "Arial";
-      background-color: #e0f7fa;
-      color: #006064;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      width: 400px;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 50px;
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .button {
-      padding: 10px 20px;
-      font-size: 18px;
-      margin: 10px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      background-color: #00838f;
-      color: #ffffff;
-      text-decoration: none;
-      display: inline-block;
-      width: 140px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-    .form-group {
-      width: 100%;
-      margin-bottom: 15px;
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-size: 16px;
-      color: #004d40;
-    }
-    input[type="text"], input[type="password"], button {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-    .wifi-list {
-      margin-top: 20px;
-      width: 100%;
-      padding: 10px;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      max-height: 250px;
-      overflow-y: auto;
-      margin-bottom: 30px;
-    }
-    .wifi-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-    }
-    .wifi-item:last-child {
-      border-bottom: none;
-    }
-    .wifi-item:hover {
-      background-color: #f0f0f0;
-    }
-    .note {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #004d40;
-    }
-    .note h5 {
-      margin-bottom: 5px;
-    }
-    .separator {
-      width: 100%;
-      height: 1px;
-      background-color: #004d40;
-      margin: 20px 0px;
-    }
-    .button-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <div class="container">
@@ -192,11 +90,11 @@
 
         fetch('/save-wifi', {
             method: 'POST',
-            body: formData 
+            body: formData  // Sending data as form data, not JSON
         })
         .then(response => {
             if (response.ok) {
-            alert(response.text);
+            alert("WiFi settings saved. Restarting device...");
             window.location.href = '/';
             } else {
             alert("Failed to save WiFi settings.");
