--- a/web pages/index.html
+++ b/web pages/index.html
@@ -8,16 +8,21 @@
 <body>
   <div class="container">
     <h1>%PORTAL_HEADING%</h1>
+    %CUSTOM_CONTENT%
     <a href="/info" class="button">Device Info</a>
     <a href="/wifimanage" class="button">Manage WIFI</a>
     <a href="/debug" class="button">Wireless Debug</a>
     <a href="/update" class="button">Update Firmware</a>
     <a href="/erase" class="button">Erase Settings</a>
     <a href="/restart" class="button">Restart Device</a>
+    <a href="/about" class="button">About</a>
     <div class="separator"></div> 
     <div class="note">
       <h5>Note</h5>
       If the update function isn't working, open the portal in your browser: <a href="http://%CUSTOM_DOMAIN%">%CUSTOM_DOMAIN%</a>
+    </div>
+    <div class="footer">
+      Developed by <a href="https://github.com/Hamas888" target="_blank">Hamas Saeed</a>
     </div>
   </div>
 </body>
